--- a/survey_form.html
+++ b/survey_form.html
@@ -5,14 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Survey Form</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="survey_form.css" />
-    <!-- <script src="main.js"></script> -->
+    <link rel="stylesheet" type="text/css" media="screen" href="survey_form.css" />    
 </head>
 <body>
     
 <header id="header">
 
-<h1 id="title">Survey Formz</h1>
+<h1 id="title">Survey Form</h1>
 
 <p id="description"></p>
 
