--- a/survey_form.html
+++ b/survey_form.html
@@ -19,7 +19,7 @@
 
 <div id="main-container">
 
-<p>Let me know how awesome this form is</p>
+<p>Let me know how awesome this form is!</p>
 
 <form action="" id="survey-form">
     
