--- a/survey_form.html
+++ b/survey_form.html
@@ -54,6 +54,7 @@
                                     <option>Student</option>
                                     <option>Working full time</option>
                                     <option>Working part time</option>
+                                    <option>Unemployed</option>
                                 </select>
                         </div>
                     </div>
